htdocs/src/ui_map.css
#map {
	position: absolute;
	top: 0%;
	height: 100%;
	left: 0px;
	right: 351px;
	background-color: black;
}

#overview {
	position: absolute;
	top: 0%;
	height: 100%;
	right: 0px;
	width: 350px;
	border-left: 1px solid #E5E5E5;
	background-color: #FFF;
	font-size: 14px;
}

#overview.collapsed {
	display: none;
}

.layerselection {
	position: absolute;
	left: 0px;
	right: 0px;
	padding: 5px 4px;
	height: 39px;
}

.layerselection.top {
	top: 0px;
	border-bottom: 1px solid #E5E5E5;
	clear: both;
}

.layerselection.bottom {
	bottom: 0px;
	border-top: 1px solid #E5E5E5;
	clear: both;
}

.layerselection a {
	background-color: #E5E5E5;
	color: #333;
	margin: 5px;
	padding-left: 5px;
	padding-right: 5px;
	height: 23px;
	border: 1px solid rgb(230, 230, 230);
	border-radius: 1px;
	text-decoration: none;
	text-align: center;
	vertical-align: middle;
	padding-top: 2px;
	text-decoration: none;
	height: 23px;
}

.layerselection a:first-child {
	margin-left: 0px;
}

.layerselection a:last-child {
	margin-right: 0px;
}

.layerselection a:hover {
	border: 1px solid #C6C6C6;
	box-shadow: 0px 1px 1px rgb(230, 230, 230);
}

.layerselection .left {
	float: left;
}

.layerselection .right {
	float: right;
}

#layerControls {
	position: absolute;
	top: 50px;
	bottom: 50px;
	left: 0px;
	right: 0px;
	
	overflow-y: auto;
	overflow-x: hidden;
}

.layerControl {
	margin: 10px;
	border: 1px solid #C6C6C6;
	border-radius: 1px;
	background-color: #FFF;
	cursor: pointer;
}

.layerControl .header {
	border-bottom: 1px solid #C6C6C6;
	padding-bottom: 2px;
	position: relative;
}

.layerControl .footer {
	border-top: 1px solid #C6C6C6;
	position: relative;
}

.layerControl ul {
    list-style: none;
    margin: 0px;
    padding: 0px;
}

.layerControl li {
	display: inline-block;
}

.layerControl ul.left {
	position: absolute;
	left: 0px;
	width: 58px;
}

.layerControl ul.right {
	position: absolute;
    right: 0px;
    width: 87px;
}

.layerControl .header,.layerControl .footer {
	height: 20px;
	background: rgb(230, 230, 230);
}

.layerControl .header .name {
	position: absolute;
	left: 58px;
	right: 87px;
	
	margin: 0;
	padding: 0px 5px;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
}

.layerControl .button {
	width: 20px;
	text-align: center;
}

.layerControl .button.active {
    background-color: #CCCCCC;
}

.layerControl .button:hover {
	background-color: #C6C6C6;
}

.layerControl hr {
	margin-top: 0px;
	border-top: 0px;
	border-left: 1px solid #C6C6C6;
	border-right: 0px;
	border-bottom: 0px;
	height: 100%;
	width: 1px;
	display: inline;
}

.layerControl .minimap {
	position: relative;
	padding-bottom: 50%;
	background: #000;
	padding-bottom: 50%;
	clear: both;
}

.layerControl .minimap img {
	width: 100%;
	height: 100%;
	position: absolute;
}

.ui-state-highlight {
	margin: 0px 10px;
	border: 3px dashed #C6C6C6;
	background: none;
	text-align: center;
	color: #C6C6C6;
}

.ui-state-highlight:before {
	content: "DROP";
}

#collapseOverview {
	height: 12px;
	width: 8px;
	right: 344px;
	position: absolute;
	
	padding: 16px 1px;
	font-size: 14px;
	z-index: 100;
	
	color: #000;
	top: 50%;
	background-color: #E5E5E5;
	border: 1px solid #FFF;
	border-radius: 5px;
	
	cursor: pointer;
}

#collapseOverview:hover {
	background-color: #C6C6C6;
	border: 1px solid rgb(230, 230, 230);
}

#collapseOverview.collapsed {
	right: 0px;
	border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

#collapseOverview.collapsed:before {
	content: "";
}

